language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_local_variable_from_guard.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn main() {\n  let wibble = True\n  let wobble = False\n  case wibble {\n    True if wobble -> !wibble\n    False if !wobble -> wibble\n    _ -> wobble\n  }\n}\n"
---
-- app.gleam

pub fn main() {
  let wibble = True
  let wobble = False
      ▔▔▔▔▔▔        
  case wibble {
    True if wobble -> !wibble
            ▔↑▔▔▔▔           
    False if !wobble -> wibble
              ▔▔▔▔▔▔          
    _ -> wobble
         ▔▔▔▔▔▔
  }
}
