language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_module_name.snap
---
source: language-server/src/tests/reference.rs
expression: "\nimport maths\n\npub fn main() {\n  maths.pi()\n}\n"
---
-- maths.gleam

pub fn pi() -> Float {
  3.14
}


-- app.gleam

import maths
       ↑▔▔▔▔

pub fn main() {
  maths.pi()
  ▔▔▔▔▔     
}
