language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_panic_are_not_shown_for_another_package.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn wibble() {\n  panic\n}\n\nfn wobble() {\n  panic as \"wobble\"\n}\n        "
---
-- app.gleam

pub fn wibble() {
  panic
  ↑▔▔▔▔
}

fn wobble() {
  panic as "wobble"
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
