language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_panic_in_same_package.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn wibble() {\n  panic\n}\n\nfn wobble() {\n  panic as \"wobble\"\n}\n        "
---
-- woo.gleam

pub fn wibble() {
  panic
  ▔▔▔▔▔
}

fn wobble() {
  panic as "wobble"
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
            


-- app.gleam

pub fn wibble() {
  panic
  ↑▔▔▔▔
}

fn wobble() {
  panic as "wobble"
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
