language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_prefix_string_alias_and_suffix_complex_guard.snap
---
source: language-server/src/tests/reference.rs
expression: "\nfn main() {\n  case \"1-wibble\" {\n    \"1\" as digit <> rest if digit == \"1\" && rest == \"-wibble\" -> #(digit, rest)\n    _ -> #(\"\", \"\")\n  }\n}\n"
---
-- app.gleam

fn main() {
  case "1-wibble" {
    "1" as digit <> rest if digit == "1" && rest == "-wibble" -> #(digit, rest)
           ↑▔▔▔▔            ▔▔▔▔▔                                  ▔▔▔▔▔       
    _ -> #("", "")
  }
}
